--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,7 +1,7 @@
 {
     "extends": "stylelint-config-standard",
     "rules": {
-        "indentation": "tab",
+        "indentation": 4,
         "at-rule-no-unknown": [
             true,
             {
